<resources>
    <string name="app_name">Shortcut</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="username_hint">username</string>
    <string name="password_hint">Password</string>
    <string name="shortcut_title">Shortcut</string>
    <string name="login_text">Login</string>

    <string name="time_detail">Total Time</string>
    <string name="description_detail">Description</string>
    <string name="apps">Apps</string>
    <string name="actions">Actions</string>
    <string name="title_text">Title</string>
    <string name="tap_text">Tap</string>
    <string name="my_shortcuts">My Shortcuts</string>
    <string name="new_shortcut">New Shortcut</string>
    <string name="share">Share Shortcut</string>
    <string name="send_shortcut">Send Shortcut</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="shortcut_widget">Shortcut</string>
    <string name="settings">Settings</string>

    <string name="title_select_apps">Select Apps</string>
    <string name="logout">Logout</string>
</resources>
