<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
                android:id="@+id/shortcut_list"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/my_shortcuts"/>
        <item
                android:id="@+id/new_shortcut"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/new_shortcut"/>

        <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/share"/>

        <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/send_shortcut"/>

    </group>


</menu>
