<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGray"
>

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/app_bar"
            android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorRed"
                app:popupTheme="@style/AppTheme.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
            android:text="@string/time_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:id="@+id/total_time_detail"
            android:layout_below="@+id/app_bar"
            android:layout_margin="20dp"/>

    <TextView
            android:text="time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/colorBlack"
            android:id="@+id/time_detail"
            android:layout_toRightOf="@id/total_time_detail"
            android:layout_below="@+id/app_bar"
            android:layout_margin="20dp"/>

    <TextView
            android:text="@string/description_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:id="@+id/description_title_detail"
            android:layout_below="@+id/total_time_detail"
            android:layout_margin="20dp"/>

    <TextView
            android:text="some description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/colorBlack"
            android:id="@+id/description_detail"
            android:layout_below="@+id/description_title_detail"
            android:layout_margin="20dp"/>

    <TextView
            android:text="@string/apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:id="@+id/apps_title_detail"
            android:layout_below="@+id/description_detail"
            android:layout_margin="20dp"/>

    <TableRow android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/app_buttons"
              android:layout_marginLeft="20dp"
              android:layout_below="@+id/apps_title_detail"
    >
        <Button
                style="@style/AppButton"
        />

        <Button
                style="@style/AppButton"
        />

        <Button
                style="@style/AppButton"
        />
    </TableRow>

    <TextView
            android:text="@string/actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:id="@+id/actions_title"
            android:layout_below="@+id/app_buttons"
            android:layout_margin="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/recycler_view_detail"
            android:layout_below="@id/actions_title"
            android:layout_marginLeft="30dp"
    />


</RelativeLayout>