<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorGray">

    <TextView
            android:text="@string/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:id="@+id/title_shortcut_title_edit"
            android:layout_margin="20dp"/>

    <EditText
            android:text="@string/title_text"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/colorBlack"
            android:id="@+id/shortcut_title_edit"
            android:layout_toRightOf="@id/title_shortcut_title_edit"
            android:layout_marginLeft="40dp"
            android:layout_alignBaseline="@+id/title_shortcut_title_edit"/>

    <TextView
            android:text="@string/description_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:id="@+id/description_title_edit"
            android:layout_below="@+id/shortcut_title_edit"
            android:layout_margin="20dp"/>

    <EditText
            android:inputType="textMultiLine"
            android:layout_width="379dp"
            android:layout_height="135dp"
            android:textSize="25sp"
            android:textColor="@color/colorBlack"
            android:id="@+id/description_edit"
            android:layout_below="@+id/description_title_edit"
            android:layout_marginTop="-19dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="20dp"/>

    <TextView
            android:text="@string/apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:id="@+id/apps_title_edit"
            android:layout_below="@+id/description_edit"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/app_list"
            android:layout_marginLeft="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/apps_title_edit"/>

    <TextView
            android:text="@string/lock_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textStyle="bold"
            android:id="@+id/lock_title_edit"
            android:textColor="@color/colorBlack"
            android:layout_below="@+id/app_list"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"/>

    <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/is_locked_edit"
            android:layout_below="@+id/lock_title_edit"
            android:layout_alignLeft="@+id/lock_title_edit"/>

</RelativeLayout>